Some words were translated
Some words were edited

--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -251,7 +251,7 @@
     <string name="force_english_language">İngilizce dilini kulanmaya zorla</string>
     <string name="force_english_language_sub">Uygulama içerisinde İngilizce dilini kullanmaya zorla</string>
     <string name="fab_cache">Önbelleği temizle</string>
-    <string name="fab_media">Kill media server</string>
+    <string name="fab_media">Medya sunucusunu öldür</string>
     <string name="fab_media_sub">Medyasunucusu işlemi aygıtınızı ortam dosyaları için tarar. Çoğu zaman yeniden başlatmak sorunları düzeltmek için yeterlidir.\nMedyasunucusu pilinizi mi boşaltıyor? İşlemi sonlandırmayı deneyin (ses çıkışı alamayabilirsiniz).</string>
     <string name="fab_boost">Hızlandır</string>
     <string name="mod_settings_dialog">Please allow HEBF modify settings, it is needed to e.g, change the brightness.</string>
@@ -267,16 +267,16 @@
     <string name="entendi">ANLADIM</string>
     <string name="misc_kernel_info">These features require a custom kernel. If your kernel does not support one of them, it will remain hidden.</string>
     <string name="mostrar_novamente">Bir daha gösterme</string>
-    <string name="tap_sub">Wake up your device with a double tap on the screen, similar to Knock On of some LG devices.</string>
+    <string name="tap_sub">Cihazınızı, bazı LG cihazlarının Knock On'a benzer şekilde ekranda bir çift dokunuşla uyandırın.</string>
     <string name="fast_charge">USB Hızlı şarj</string>
     <string name="fast_charge_sub">PC veya dizüstü bilgisayara bağlandığında USB üzerinden pil şarjını hızlandırır.</string>
-    <string name="dynamic_fsync">Dynamic fsync</string>
+    <string name="dynamic_fsync">Dinamik fsync</string>
     <string name="dynamic_fsync_sub">Fsync ensures that all data be written to the storage device, it waits until the device reports that the transfer has completed, preventing data loss if the system crashes. (Which may cause delays).</string>
     <string name="ksm_sub">Crucial for low RAM devices, the KSM merges two kernel pages if they are found to have same data, helping the user to get more free space for the applications.</string>
     <string name="kernel_fail1">Öyle görünüyor ki, etkinleştirmek için seçeneğiniz yok.</string>
     <string name="kernel_fail2">Başka bir özel kernel ile tekrar deneyin</string>
     <string name="escolher_pacote">Bir paket seçin</string>
-    <string name="lock">App killing tendency</string>
+    <string name="lock">Uygulama öldürme eğilim</string>
     <string name="definido">Değer kaydedildi</string>
     <string name="lock_sub">This option will decrease the tendency of a process to be killed by the system in OOM (Out of memory) cases. This can only be set to a RUNNING process, that means you need to open / wake it up in order to see it in the below list.</string>
     <string name="restaurando">Geri yükleniyor</string>
@@ -326,20 +326,20 @@
     <string name="theme">Tema</string>
     <string name="apply_on_boot">Açılışta uygula</string>
     <string name="on_boot_title">HEBF Optimizer</string>
-    <string name="on_boot_finished">Successfully applied</string>
-    <string name="check_for_updates">Gğncellemeleri kontrol et</string>
+    <string name="on_boot_finished">Başarıyla uygulandı</string>
+    <string name="check_for_updates">Güncellemeleri kontrol et</string>
     <string name="updating">Güncelleniyor …</string>
     <string name="updated">HEBF güncellendi</string>
     <string name="rate_this_app">Bu uygulamayı değerlendir</string>
     <string name="rate_this_app_sub">Leave your review on the Google Play Store</string>
     <string name="donate_sub">Geliştiricilere bağışta bulun</string>
     <string name="uninstall">Bu uygulamayı kaldır</string>
-    <string name="uninstall_sub">Remove the changes made by this app to the system for a complete and safer restore</string>
+    <string name="uninstall_sub">Bu uygulamayla yapılan değişiklikleri sisteme eksiksiz ve daha güvenli bir geri yükleme için kaldırın</string>
     <string name="application_preferences">Uygulama tercihleri</string>
     <string name="backup_app_prefs_sub">Geçerli uygulama tercihlerini ve kullanıcı ayarlarınızı yedekler.</string>
     <string name="backup_sub_card">Etkinleştirdiğiniz özellikleri, geçerli uygulama ayarlarını yedekler.</string>
     <string name="status">Durum</string>
-    <string name="delete_backup">Delete backup</string>
+    <string name="delete_backup">Yedeği sil</string>
     <string name="show_notifications">Bildirimleri göster</string>
     <string name="show_notifications_sub">Uyarı/Bilgi bildirimlerinin gösterilip gösterilmeyeceğini seçin</string>
     <string name="clean_on_boot">Açılışta temizle</string>
@@ -351,7 +351,7 @@
     <string name="edit">Düzenle</string>
     <string name="remove">Kaldır</string>
     <string name="add">Ekle</string>
-    <string name="add_from_presets">Add from presets</string>
+    <string name="add_from_presets">Ön ayarlardan ekle</string>
     <string name="view_log">Günlükleri görüntüle</string>
     <string name="title_activity_dns">Manuel DNS</string>
     <string name="fsync_sub">Fsync synchronizes a file\'s in-core state with the storage device so that all changed information can be retrieved even after the system crashed or was rebooted.\nFor safety, if you disable it, make sure you have a proper backup.</string>
@@ -364,7 +364,7 @@
     <string name="write">Yaz</string>
     <string name="dns_sub">Özel bir DNS; hız, tepki ve güvenliği artırabilir. Ayrıca, engellenen web sitelerine erişmenize ve bulunduğunuz yere bağlı olarak ağınızın bazı sansür filtrelerini atlamanıza izin verebilir.</string>
     <string name="value">Değer</string>
-    <string name="key">Key</string>
+    <string name="key">Anahtar</string>
     <string name="command">Command</string>
     <string name="game_booster_sub">Oyunu açmadan önce, performansını arttırmak için CPU governor\'ı ayarla.</string>
     <string name="battery_information">Pil bilgileri</string>
@@ -372,34 +372,34 @@
     <string name="show_less">Daha az göster</string>
     <string name="temperatura">Sıcaklık: %1$s</string>
     <string name="set">Set</string>
-    <string name="previous">Previous</string>
-    <string name="next">Next</string>
+    <string name="previous">Önceki</string>
+    <string name="next">Sonraki</string>
     <string name="intro_guia">Hoşgeldiniz! Bu kılavuz, uygulama kurulum sürecinde size yardımcı olacaktır</string>
-    <string name="done">Done</string>
+    <string name="done">Tamam</string>
     <string name="no_logs_found">Günlük bulunamadı</string>
     <string name="tendency_sub">Daha yüksek değerler, işlemin önce öldürülmesi anlamına gelir.</string>
-    <string name="tendency">Tendency</string>
-    <string name="stop_service">Stop</string>
+    <string name="tendency">Eğilim</string>
+    <string name="stop_service">Dur</string>
     <string name="service_stopped">Hizmet durdu</string>
     <string name="service_not_running">Hizmet çalışmıyor</string>
-    <string name="atraso">Reapply interval</string>
-    <string name="atraso_sub">The delay in seconds for the application to reapply changes.</string>
-    <string name="app_caches_android_data">App caches (Android/data)</string>
-    <string name="app_caches_data">App caches (/data/data)</string>
-    <string name="other_caches">Other caches</string>
-    <string name="splash1">The recommended frequency for trimming the file system is once a week</string>
+    <string name="atraso">Tekrar uygulama aralığı</string>
+    <string name="atraso_sub">Uygulamanın değişiklikleri tekrar uygulamasının saniye cinsinden gecikmesi.</string>
+    <string name="app_caches_android_data">Uyg. önbellekleri (Android/data)</string>
+    <string name="app_caches_data">Uyg. (/data/data)</string>
+    <string name="other_caches">Diğer önbellekler</string>
+    <string name="splash1">Dosya sistemini düzeltmek için önerilen sıklık haftada bir kez</string>
     <string name="splash10">Created in the midst of a broken heart</string>
-    <string name="splash11">[LMK] You can tap the current value to quickly get back to the default / found one</string>
-    <string name="splash12">Check out the XDA Thread</string>
+    <string name="splash11">[LMK] Varsayılan / bulunan bir ayara hızlı bir şekilde geri dönmek için geçerli değere dokunabilirsiniz</string>
+    <string name="splash12">XDA konusunu kontrol edin</string>
     <string name="splash2">The LMK Manager can be quite meaningful if you find a good balance for it</string>
-    <string name="splash3">\"Kernel Options\" will only be available if your kernel supports</string>
+    <string name="splash3">\"Çekirdek Seçenekleri \" yalnızca çekirdeğiniz destekliyorsa kullanılabilir</string>
     <string name="splash4">It is never recommended to turn everything on at once</string>
-    <string name="splash5">There is a hidden section…</string>
-    <string name="splash6">Hidden thumbnails are located in the \"DCIM\" folder</string>
+    <string name="splash5">Gizli bir bölüm var...</string>
+    <string name="splash6">Gizli küçük resimler \"DCIM \" klasöründe bulunur</string>
     <string name="splash7">The green theme is a tribute in support of the Brazilian football team Chapecoense</string>
-    <string name="splash8">Have you tried one of the widgets?</string>
-    <string name="splash9">Backups can be made</string>
-    <string name="thank_you">Thank you!</string>
+    <string name="splash8">Widget'lardan birini denedin mi?</string>
+    <string name="splash9">Yedeklemeler yapılabilir</string>
+    <string name="thank_you">Teşekkür ederim!</string>
     <string name="art_sum">The Android Runtime (ART) uses ahead-of-time compilation to compile the dex code into native code at the time of installation, pre-optimizing it using the dex2oat tool so your processor can interpret the code easier.</string>
     <string name="captive_portal">Captive portal detection</string>
     <string name="captive_sub">Toggles the captive portal detection. If turned on, the system will try to check the connection quality in order to detect connectivity.\nIf turned off, the system will aways believe that the connection is healthy and will not draw the \"exclamation mark\" over the strength icon.</string>
@@ -413,7 +413,7 @@
     <string name="lmk_hidden_app">Hidden app</string>
     <string name="lmk_secondary_server">Secondary server</string>
     <string name="lmk_visible_app">Visible app</string>
-    <string name="search">Search</string>
+    <string name="search">Arama</string>
     <string name="crash_info">Houston, we\'ve had a problem… It looks like the app crashed the last time it was run. You can notify the developers about this or ignore.</string>
     <string name="free_space_available">Free space available</string>
     <string name="junk_found">Junk found</string>
@@ -425,8 +425,8 @@
     <string name="launch">Launch</string>
     <string name="package_disabled">Package disabled</string>
     <string name="title_activity_freeze">Disable apps</string>
-    <string name="uninstall_app">Uninstall</string>
-    <string name="root_access">Root Access</string>
+    <string name="uninstall_app">Kaldırma</string>
+    <string name="root_access">Kök Erişimi</string>
     <string name="root_access_sub">HEBF needs root access in order to work. Please ensure that you have superuser privileges and click on the button above</string>
     <string name="grant">Grant</string>
     <string name="dashboard">Dashboard</string>
